[package]
name = "glint"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
toml = "0.8.19"
regex = "1.10.6"
lazy_static = "1.5.0"
once_cell = "1.20.0"
bat = "0.24.0"
dialoguer = "0.11.0"
console = "0.15.8"

